src/test/deca/context/invalid/declMethod-sameParamVar.deca
class A {
    int x = 3;

    int coco(int x) {
        int x = 2;
        return x;
    }
}

{
    A a = new A();
    print(a.coco(5));
}